{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 9,
  "lineage": "1d1b7217-f84e-2c15-dbf5-b4fb8e05754c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792172459200:internet-gateway/igw-09a9939cbfc99400a",
            "id": "igw-09a9939cbfc99400a",
            "owner_id": "792172459200",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-vpc-igw"
            },
            "tags_all": {
              "Name": "terraform-vpc-igw"
            },
            "vpc_id": "vpc-0aed77171c8feab0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792172459200:route-table/rtb-047dbb113edab6fdf",
            "id": "rtb-047dbb113edab6fdf",
            "owner_id": "792172459200",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "terraform-vpc-private-rt"
            },
            "tags_all": {
              "Name": "terraform-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aed77171c8feab0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792172459200:route-table/rtb-04b775f62bd693138",
            "id": "rtb-04b775f62bd693138",
            "owner_id": "792172459200",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a9939cbfc99400a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-vpc-public-rt"
            },
            "tags_all": {
              "Name": "terraform-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aed77171c8feab0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d342cbd514a4fc7",
            "region": "us-east-1",
            "route_table_id": "rtb-047dbb113edab6fdf",
            "subnet_id": "subnet-0b4d0d0b6815212d9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043efcbebb23046a0",
            "region": "us-east-1",
            "route_table_id": "rtb-04b775f62bd693138",
            "subnet_id": "subnet-01e06d7342f98b253"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792172459200:subnet/subnet-0b4d0d0b6815212d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4d0d0b6815212d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792172459200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-vpc-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-vpc-private-subnet"
            },
            "vpc_id": "vpc-0aed77171c8feab0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792172459200:subnet/subnet-01e06d7342f98b253",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e06d7342f98b253",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792172459200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-vpc-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-vpc-public-subnet"
            },
            "vpc_id": "vpc-0aed77171c8feab0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792172459200:vpc/vpc-0aed77171c8feab0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d595d58c85c51696",
            "default_route_table_id": "rtb-08d74bed52adb5e67",
            "default_security_group_id": "sg-08780377c5791a02c",
            "dhcp_options_id": "dopt-04646fd86900d3c9a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aed77171c8feab0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d74bed52adb5e67",
            "owner_id": "792172459200",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-vpc-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}